fixing menu alignment

--- a/code/css/2_nav.css
+++ b/code/css/2_nav.css
@@ -47,7 +47,7 @@ body #nav ul li ul li span{
 #nav ul li a,
 #nav ul li span{
 	height:auto;
-	padding:4px 5px 4px;
+	padding:4px 6px;
 	display: block;
 	margin: 0;
 	text-decoration: none;
@@ -85,4 +85,10 @@ body #nav ul li ul li span{
 }
 .menu ul{
 	margin-left: 0;
+}
+
+.menu ul.small {
+	padding: 5px 0 0 0;
+	font-size: 13px;
+	line-height: 150%;
 }
